src/objects/polling__c.object
<CustomObject>
    <fields>
        <fullName>Accunt1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>巡检</relationshipLabel>
        <relationshipName>xunjian</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BJSF__c</fullName>
        <label>原因(BJSF)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>巡检</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>截止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeviseSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>巡检</relationshipLabel>
        <relationshipName>shebe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscoverProblems__c</fullName>
        <label>发现问题及优化措施</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EquipmentLife__c</fullName>
        <label>设备使用年限</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EquipmentModel__c</fullName>
        <formula>DeviseSerialNumber__r.ProductModelCG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>DeviseSerialNumber__r.ProductNameCG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentOperatingConditions__c</fullName>
        <label>设备运行状况</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EquipmentType__c</fullName>
        <label>设备类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>合同设备</fullName>
                </value>
                <value>
                    <fullName>配件</fullName>
                </value>
                <value>
                    <fullName>样机</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FWTD__c</fullName>
        <label>原因(FWTD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>pollingdate__c + 90</formula>
        <label>下一次巡检时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieldSpecification__c</fullName>
        <label>现场规范</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <label>总部工程师反馈</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InitialInstallationDate__c</fullName>
        <label>初次安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspectionrecord__c</fullName>
        <label>巡检记录</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JJXL__c</fullName>
        <label>原因(JJXL)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MYD__c</fullName>
        <label>原因(MYD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaintenanceAdvice__c</fullName>
        <label>维护建议</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MonthlySurgery__c</fullName>
        <label>月手术（检查）量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotationFees__c</fullName>
        <label>报价收费</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionalManagerAssessment__c</fullName>
        <label>大区经理评定</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RespondingSpeed__c</fullName>
        <label>响应速度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleDepartment__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <label>负责部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevisitDays__c</fullName>
        <label>回访时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>满意度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>非常满意</fullName>
                </value>
                <value>
                    <fullName>满意</fullName>
                </value>
                <value>
                    <fullName>一般</fullName>
                </value>
                <value>
                    <fullName>不满意</fullName>
                </value>
                <value>
                    <fullName>投诉</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceAttitude__c</fullName>
        <label>服务态度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceID__c</fullName>
        <displayFormat>XJ-{YYYY}{MM}-{000000}</displayFormat>
        <label>服务编号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SolveEfficiency__c</fullName>
        <label>解决效率</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surgery__c</fullName>
        <label>年手术（检查）量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalEvaluation__c</fullName>
        <label>技术部评定</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Types__c</fullName>
        <label>类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>集团客户</fullName>
                </value>
                <value>
                    <fullName>VIP客户</fullName>
                </value>
                <value>
                    <fullName>保修客户</fullName>
                </value>
                <value>
                    <fullName>非保修客户</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitrecord__c</fullName>
        <label>回访记录</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WarrantyExpirationDate__c</fullName>
        <label>保修终止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkDate__c</fullName>
        <label>工作日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XCGF__c</fullName>
        <label>原因(XCGF)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>XJname__c</fullName>
        <formula>RecordType.Name&amp;&quot;-&quot;&amp;EquipmentModel__c 
&amp;&quot;-&quot;&amp; DeviseSerialNumber__r.Name &amp;&quot;-&quot;&amp; Accunt1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>巡检名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XYSD__c</fullName>
        <label>原因（XYSD)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>autoNumbering__c</fullName>
        <displayFormat>FWQQ-{YYYY}{MM}-{000000}</displayFormat>
        <label>自动编号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pollingdate__c</fullName>
        <label>巡检日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pollingpurpose__c</fullName>
        <label>巡检目的</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>安装检查</fullName>
                </value>
                <value>
                    <fullName>定期巡检</fullName>
                </value>
                <value>
                    <fullName>高峰期巡检</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>巡检</relationshipLabel>
        <relationshipName>OPjq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未开始</fullName>
                </value>
                <value>
                    <fullName>进行中</fullName>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>年度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>巡检</label>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>servicerequest__c</columns>
        <columns>pollingdate__c</columns>
        <columns>pollingpurpose__c</columns>
        <columns>state__c</columns>
        <columns>remark__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>巡检</pluralLabel>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <label>常规设备巡检</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>大型设备巡检</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>